# RecCache

./: .gitignore  README.md  SUPPLEMENTARY.md  TODO.md  pyproject.toml
archive/: README_ARCHIVE.md  RESEARCH_GAP_ANALYSIS.md  SOTA_ANALYSIS.md  TODO_TOPCONF.md  WORKSHOP_SUBMISSION_PLAN.md
paper/: main.tex  references.bib
results/: ablation_results.json  benchmark_results.json  carl_comparison_results.json  complete_results.json  concept_drift_results.json  experiment_results.json  final_results.json  model_agnostic_results.json  online_simulation_results.json  paper_results.json  recsys2026_results.json  s10_laser_criterion.json  s11_s12_largescale.json  s13_lightgcn.json  s14_gemma4_embeddings.json  s15_gpu_latency.json  s9_competitor_lowrank.json  scalability_results.json  significance_tests.json  speculative_results.json  stress_test_results.json  supp_a1_a2_multimetric.json  supp_a3_faiss.json  supp_a4_cluster_analysis.json  supp_b2_extended_replay.json  supp_cache_refresh.json  supp_online_serving_replay.json  supp_twotower_baseline.json  supplemental_results.json
scripts/: benchmark.py  component_analysis.py  demo_movielens.py  quick_validate.py  run_ablation_experiments.py  run_cache_refresh.py  run_carl_comparison.py  run_cluster_analysis.py  run_competitor_baselines.py  run_complete_experiments.py  run_concept_drift.py  run_experiments.py  run_extended_replay.py  run_faiss_baseline.py  run_final_experiments.py  run_full_experiments.py  run_gemma4_experiments.py  run_gpu_latency.py  run_largescale_experiments.py  run_lightgcn_experiments.py  run_model_agnostic_experiments.py  run_online_serving_replay.py  (+10 more)
(+40 files in other folders)
